ash: Do not return vector icons from message center GetActiveNotifications.

The vector icon field causes Mojo de-serialization error for unregistered
icons, and anyway they are not used by the caller (autotest_private API.)

Bug: 836080
Test: cheets_MediaProjectionPermissionsTest
Change-Id: Id7f680fafbe91c21e42dce794601deef5e5d8ac2
Reviewed-on: https://chromium-review.googlesource.com/1025243
Reviewed-by: Evan Stade <estade@chromium.org>
Commit-Queue: Kazuhiro Inaba <kinaba@chromium.org>
Cr-Commit-Position: refs/heads/master@{#553545}
Former-commit-id: 8af66c3412aa4dea4388e6d9b25b512c74a17099